added copy content to homepage

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -22,19 +22,22 @@
 		</div>
 	</section>
 
-	<section class="backgrounds">
+	<section class="section-content mod-background">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-xs-12 content-container">
+				<div class="col-md-6 col-md-offset-0 col-xs-10 col-xs-offset-1 content-container">
 					<div class="content">
 						<h3>
 							Background
 						</h3>
 						<p>
-							Lorem ipsum dolor sit amet, alii intellegam nec ea, exerci convenire in has. Ut voluptaria omittantur deterruisset ius, usu nihil adipisci ea, ea veniam bonorum offendit eum. Eos ex dicam facilis scribentur, vel graeci deserunt ne. Ne est denique oportere, has malis laudem laoreet ea, delenit consequuntur id est. Mei exerci probatus perfecto cu, nec aperiri legendos urbanitas no. Ne cum mazim veniam, cum aeque feugiat quaerendum an. Sed sumo zril at.
+							Hi, my name is Yanwen, some people call me Yan for short.  I am a front end developer that enjoys coding in HTML, CSS, and JavaScript.  My focus is on the AngularJS framework.  I also love doing design work as well and will jump into photoshop to touch up images.
 						</p>
 						<p>
-							Lobortis similique referrentur per cu. Vim ut virtute offendit voluptaria, no eos eros persecuti. Solet urbanitas ius in. Vidisse accusam ut vel.
+							I grew up in China and after I graduated from college, I had the chance to come to the US because my father was able to apply for a green card for me and I’ve been here ever since.
+						</p>
+						<p>
+							I enjoy taking pictures, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world
 						</p>
 					</div>
 				</div>
@@ -45,22 +48,25 @@
 		</div>
 	</section>
 
-	<section class="programmings">
+	<section class="section-content mod-programming">
 		<div class="container">
 
 			<hr/>
 
 			<div class="row">
-				<div class="col-md-6 col-xs-12 content-container">
+				<div class="col-md-6 col-md-offset-0 col-xs-10 col-xs-offset-1 content-container">
 					<div class="content">
 						<h3>
 							Programming
 						</h3>
 						<p>
-							Lorem ipsum dolor sit amet, alii intellegam nec ea, exerci convenire in has. Ut voluptaria omittantur deterruisset ius, usu nihil adipisci ea, ea veniam bonorum offendit eum. Eos ex dicam facilis scribentur, vel graeci deserunt ne. Ne est denique oportere, has malis laudem laoreet ea, delenit consequuntur id est. Mei exerci probatus perfecto cu, nec aperiri legendos urbanitas no. Ne cum mazim veniam, cum aeque feugiat quaerendum an. Sed sumo zril at.
+							My first encounter with technology was when I was in elementary school and MSN Messenger first came out.  I thought it was amazing that I could live chat with anyone around the world.  I told myself that someday I wanted to work on something like that.
 						</p>
 						<p>
-							Lobortis similique referrentur per cu. Vim ut virtute offendit voluptaria, no eos eros persecuti. Solet urbanitas ius in. Vidisse accusam ut vel.
+							When I came to the US, I started learning English while working as a law office secretary, life insurance sales person, and ophthalmologist medical assistant.  However, on the side I was constantly learning programming because I wanted to follow my dream.
+						</p>
+						<p>
+							I took courses at Udacity, Khan Academy, W3Schools, Codecademy, PluralSight, and Maker Square.  In addition, I read books such as Eloquent JavaScript and JavaScript the Good Parts.  Now that I have experience HTML, CSS, JavaScript, and AngularJS.  I am really excited to start making a difference in the world.
 						</p>
 					</div>
 				</div>
