--- a/src/app/resume/scss/_resume.scss
+++ b/src/app/resume/scss/_resume.scss
@@ -14,6 +14,8 @@
 
 	.skill {
 
+		img { height: 64px; }
+
 		.main-skill-container {
 			text-align: center;
 		}
@@ -31,6 +33,7 @@
 		}
 
 		.image {
+			margin-top: 64px;
 			text-align: center;
 			margin-bottom: 15px;
 		}
@@ -63,7 +66,7 @@
 
 		@media screen and (min-width: $screen-md-min) {
 
-			padding-top: 120px;
+			padding-top: 56px;
 			padding-bottom: 120px;
 
 			.main-skill {
