--- a/src/main.css
+++ b/src/main.css
@@ -4043,14 +4043,18 @@ section {
     background-size: cover; } }
 
 /* line 17, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+.resume .skill img {
+  height: 64px; }
+
+/* line 19, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
 .resume .skill .main-skill-container {
   text-align: center; }
 
-/* line 21, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+/* line 23, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
 .resume .skill .sub-skill-container {
   text-align: center; }
 
-/* line 25, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+/* line 27, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
 .resume .skill .sub-skill {
   display: block;
   font-size: 16px;
@@ -4058,28 +4062,29 @@ section {
   color: #81888D;
   margin-bottom: 5px; }
 
-/* line 33, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+/* line 35, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
 .resume .skill .image {
+  margin-top: 64px;
   text-align: center;
   margin-bottom: 15px; }
 
-/* line 38, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+/* line 41, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
 .resume .skill .main-skill {
   color: #D85339;
   border-bottom: 10px solid #d2d2d2;
   display: inline-block; }
 
 @media screen and (max-width: 991px) {
-  /* line 46, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  /* line 49, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
   .resume .skill .sub-skill-container {
     padding-bottom: 50px; }
-  /* line 50, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  /* line 53, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
   .resume .skill .sub-skill-container.divider {
     border-bottom: 1px solid #d2d2d2; }
-  /* line 54, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  /* line 57, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
   .resume .skill .image {
     margin-top: 64px; }
-  /* line 58, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+  /* line 61, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
   .resume .skill .main-skill {
     margin-top: 32px;
     margin-bottom: 32px; } }
@@ -4087,9 +4092,9 @@ section {
 @media screen and (min-width: 992px) {
   /* line 15, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
   .resume .skill {
-    padding-top: 120px;
+    padding-top: 56px;
     padding-bottom: 120px; }
-    /* line 69, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
+    /* line 72, /Users/David/Desktop/git/resume/src/app/resume/scss/_resume.scss */
     .resume .skill .main-skill {
       margin-bottom: 16px; } }
 
