refactored css structure of homepage

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -25,24 +25,28 @@
 	<section class="section-content mod-background">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-md-offset-0 col-xs-10 col-xs-offset-1 content-container">
-					<div class="content">
-						<h3>
-							Background
-						</h3>
-						<p>
-							Hi, my name is Yanwen, some people call me Yan for short.  I am a front end developer that enjoys coding in HTML, CSS, and JavaScript.  My focus is on the AngularJS framework.  I also love doing design work as well and will jump into photoshop to touch up images.
-						</p>
-						<p>
-							I grew up in China and after I graduated from college, I had the chance to come to the US because my father was able to apply for a green card for me and I’ve been here ever since.
-						</p>
-						<p>
-							I enjoy taking pictures, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world
-						</p>
+				<div class="col-md-6 col-md-offset-0 col-xs-10 col-xs-offset-1">
+					<div class="content-container">
+						<div class="content">
+							<h3>
+								Background
+							</h3>
+							<p>
+								Hi, my name is Yanwen, some people call me Yan for short.  I am a front end developer that enjoys coding in HTML, CSS, and JavaScript.  My focus is on the AngularJS framework.  I also love doing design work as well and will jump into photoshop to touch up images.
+							</p>
+							<p>
+								I grew up in China and after I graduated from college, I had the chance to come to the United States because my father was able to apply for a green card for me and I’ve been here ever since.
+							</p>
+							<p>
+								I enjoy taking pictures, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world
+							</p>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-6 col-xs-12 image-container">
-					<div class="image"></div>
+				<div class="col-md-6 col-xs-12">
+					<div class="image-container">
+						<div class="image"></div>
+					</div>
 				</div>
 			</div>
 		</div>
