--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -145,6 +145,7 @@
         }
 
         @media screen and (min-width: $screen-md-min) {
+            height: 510px;
 
             .content-container {
                 height: 510px;
