--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -7,13 +7,13 @@
 					<h2>Yanwen Wang</h2>
 					<h4>Front End Developer</h4>
 					<div class="icon">
-						<a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
+						<a href="https://www.linkedin.com/in/yanwenwang">
 							<i class="fa fa-linkedin-square fa-3x"></i>
 						</a>
 						<a href="https://github.com/Yanwenwang">
 							<i class="fa fa-github-square fa-3x"></i>
 						</a>
-						<a>
+						<a href="mailto:yanwenwwang@gmail.com?Subject=Hello">
 							<i class="fa fa-envelope-o fa-3x"></i>
 						</a>
 					</div>
