added links to contact page

--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-4">
               <div class="card-container">
-                <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
+                <a href="https://www.linkedin.com/in/yanwenwang" target="_blank">
                     <p class="card-container-header">LinkedIn</p>
                     <i class="card-container-logo fa fa-linkedin-square fa-3x"></i>
                 </a>
@@ -24,7 +24,7 @@
             </div>
             <div class="col-md-4">
               <div class="card-container">
-                  <a href="https://github.com/Yanwenwang">
+                  <a href="https://github.com/Yanwenwang" target="_blank">
                     <p class="card-container-header">Github</p>
                     <i class="card-container-logo fa fa-github-square fa-3x"></i>
                   </a>
@@ -32,8 +32,10 @@
             </div>
             <div class="col-md-4">
                 <div class="card-container">
-                    <p class="card-container-header">Email</p>
-                    <i class="card-container-logo fa fa-envelope-o fa-3x"></i>
+                    <a href="mailto:yanwenwwang@gmail.com?Subject=Hello">
+                        <p class="card-container-header">Email</p>
+                        <i class="card-container-logo fa fa-envelope-o fa-3x"></i>
+                    </a>
                 </div>
             </div>
         </div>
