--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -7,10 +7,10 @@
 					<h2>Yanwen Wang</h2>
 					<h4>Front End Developer</h4>
 					<div class="icon">
-						<a href="https://www.linkedin.com/in/yanwenwang">
+						<a href="https://www.linkedin.com/in/yanwenwang" target="_blank">
 							<i class="fa fa-linkedin-square fa-3x"></i>
 						</a>
-						<a href="https://github.com/Yanwenwang">
+						<a href="https://github.com/Yanwenwang" target="_blank">
 							<i class="fa fa-github-square fa-3x"></i>
 						</a>
 						<a href="mailto:yanwenwwang@gmail.com?Subject=Hello">
