--- a/src/app/shared/scss/_card.scss
+++ b/src/app/shared/scss/_card.scss
@@ -24,6 +24,9 @@
 
     a {
         text-decoration: none;
+        width: 100%;
+        height: 100%;
+        display: inline-block;
     }
 
     .card-container-logo {
