--- a/src/app/tic-tac-toe/html/tic-tac-toe.html
+++ b/src/app/tic-tac-toe/html/tic-tac-toe.html
@@ -1,7 +1,7 @@
 <div class="tic-tac-toe">
 	<section class="hero">
 		<div class="overlay">
-			<div class="container"> 
+			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
 						<h1>Tic Tac Toe</h1>
@@ -27,39 +27,39 @@
 		 	<div class="row">
 		 		<div class="col-md-12 square-container">
 		 			<div class="square right-bottom" ng-click="ticTacToeVM.playTurn(0)">
-		 				<p ng-bind="ticTacToeVM.board[0]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(0)"></i>
 		 			</div><!--
 		 			--><div class="square right-bottom" ng-click="ticTacToeVM.playTurn(1)">
-			 			<p ng-bind="ticTacToeVM.board[1]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(1)"></i>
 			 		</div><!--
 		 			--><div class="square bottom" ng-click="ticTacToeVM.playTurn(2)">
-		 				<p ng-bind="ticTacToeVM.board[2]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(2)"></i>
 		 			</div>
 		 		</div>
 		 	</div>
 		 	<div class="row">
 		 		<div class="col-md-12 square-container">
 		 			<div class="square right-bottom" ng-click="ticTacToeVM.playTurn(3)">
-			 			<p ng-bind="ticTacToeVM.board[3]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(3)"></i>
 			 		</div><!--
 		 			--><div class="square right-bottom" ng-click="ticTacToeVM.playTurn(4)">
-			 			<p ng-bind="ticTacToeVM.board[4]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(4)"></i>
 			 		</div><!--
 		 			--><div class="square bottom" ng-click="ticTacToeVM.playTurn(5)">
-			 			<p ng-bind="ticTacToeVM.board[5]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(5)"></i>
 			 		</div>
 		 		</div>
 		 	</div>
 		 	<div class="row">
 		 		<div class="col-md-12 square-container">
 		 			<div class="square right" ng-click="ticTacToeVM.playTurn(6)">
-			 			<p ng-bind="ticTacToeVM.board[6]" ></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(6)"></i>
 			 		</div><!--
 		 			--><div class="square right" ng-click="ticTacToeVM.playTurn(7)">
-			 			<p ng-bind="ticTacToeVM.board[7]" ></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(7)"></i>
 			 		</div><!--
 		 			--><div class="square" ng-click="ticTacToeVM.playTurn(8)">
-			 			<p ng-bind="ticTacToeVM.board[8]"></p>
+						<i class="fa" ng-class="ticTacToeVM.getMark(8)"></i>
 			 		</div>
 		 		</div>
 		 	</div>
@@ -71,7 +71,3 @@
 		 </div>
 	</section>
 </div>
-
-
-
-
