--- a/src/main.scss
+++ b/src/main.scss
@@ -41,3 +41,4 @@
 @import "app/projects/scss/projects";
 @import "app/resume/scss/resume";
 @import "app/tic-tac-toe/scss/tic-tac-toe";
+@import "app/sudouku/scss/sudouku";
