added state changes to projects page

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -17,7 +17,7 @@
 	        <div class="row">
 	            <div class="col-md-6">
 	              <div class="card-container">
-	                <a href="#/tic-tac-toe">
+	                <a ui-sref="main.tic-tac-toe">
 	                    <p class="card-container-header">Tic Tac Toe</p>
 	                    <i class="card-container-logo fa fa-th fa-3x"></i>
 	                </a>
@@ -25,7 +25,7 @@
 	            </div>
 	            <div class="col-md-6">
 	              <div class="card-container">
-	                  <a>
+	                  <a ui-sref="main.sudouku">
 	                    <p class="card-container-header">Sudouku</p>
 	                    <i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
 	                  </a>
