styled illegal move modal

--- a/src/app/tic-tac-toe/html/modals/illegal-move.html
+++ b/src/app/tic-tac-toe/html/modals/illegal-move.html
@@ -1,8 +1,11 @@
+<div class="modal-header">
+    <h3 class="modal-title">Illegal Move</h2>
+</div>
 
-	<div class="modal-header">
-		<h2 class="modal-tittle">Sorry, you can't do this!</h2>
-	</div>
+<div class="modal-body">
+	You cannot do that because that spot has already been taken!
+</div>
 
-	<div class="modal-footer">
-		<button class="btn btn-primary" ng-click="modalInfoVM.ok()">OK</button>
-	</div>
+<div class="modal-footer">
+    <button ng-click="modalInfoVM.ok()">OK</button>
+</div>
