--- a/src/app/shared/scss/_modal.scss
+++ b/src/app/shared/scss/_modal.scss
@@ -1,22 +1,40 @@
 .modal-content {
-  border-radius: 15px;
-  pointer-events: none;
-  position: fixed;
-  width: 50%;
-  padding: 22px 8px;
-  background: $primary;
-  box-shadow: 0 0 25px black;
-  top: 50%;
-  left: 50%;
-  margin: 8% 0 0 -25%;
-  transition: .4s all ease;
+    border-radius: 10px;
+    overflow: hidden;
 
-  h2 {
-    font-size: 24px;
-  }
+    .modal-header {
+        text-align: center;
+        color: $primary;
+        background: $accent-hover;
+        border-bottom: 2px solid $accent-hover;
+        padding: 15px;
 
-  .btn-primary {
-    background: $accent-hover;
-    border: $accent;
-  }
+        h3 { font-weight: 400; }
+    }
+
+    .modal-body {
+        color: $text-secondary;
+        padding: 64px 30px;
+    }
+
+    .modal-footer {
+        text-align: center;
+        border: none;
+        padding: 0 0 15px 0;
+
+        button {
+            padding-top: 10px;
+            padding-bottom: 10px;
+            border: 1px solid transparent;
+
+            background: $accent-hover;
+            color: $primary;
+
+            &:hover {
+                background: $primary;
+                color: $accent-hover;
+                border: 1px solid $accent-hover;
+            }
+        }
+    }
 }
