--- a/src/main.css
+++ b/src/main.css
@@ -3448,24 +3448,39 @@ tbody.collapse.in {
 
 /* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
 .modal-content {
-  border-radius: 15px;
-  pointer-events: none;
-  position: fixed;
-  width: 50%;
-  padding: 22px 8px;
-  background: #FFFFFF;
-  box-shadow: 0 0 25px black;
-  top: 50%;
-  left: 50%;
-  margin: 8% 0 0 -25%;
-  transition: .4s all ease; }
-  /* line 14, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
-  .modal-content h2 {
-    font-size: 24px; }
-  /* line 18, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
-  .modal-content .btn-primary {
+  border-radius: 10px;
+  overflow: hidden; }
+  /* line 5, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
+  .modal-content .modal-header {
+    text-align: center;
+    color: #FFFFFF;
     background: #D75C37;
-    border: #D85339; }
+    border-bottom: 2px solid #D75C37;
+    padding: 15px; }
+    /* line 12, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
+    .modal-content .modal-header h3 {
+      font-weight: 400; }
+  /* line 15, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
+  .modal-content .modal-body {
+    color: #81888D;
+    padding: 64px 30px; }
+  /* line 20, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
+  .modal-content .modal-footer {
+    text-align: center;
+    border: none;
+    padding: 0 0 15px 0; }
+    /* line 25, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
+    .modal-content .modal-footer button {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      border: 1px solid transparent;
+      background: #D75C37;
+      color: #FFFFFF; }
+      /* line 33, /Users/David/Desktop/git/resume/src/app/shared/scss/_modal.scss */
+      .modal-content .modal-footer button:hover {
+        background: #FFFFFF;
+        color: #D75C37;
+        border: 1px solid #D75C37; }
 
 /* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_hero.scss */
 .hero {
@@ -3859,6 +3874,19 @@ section {
     font-size: 32px;
     color: #FFFFFF; }
 
+/* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_button.scss */
+button {
+  padding: 15px 45px;
+  text-transform: uppercase;
+  outline: none;
+  color: #FFBD88;
+  background: #FFFFFF;
+  border: 1px solid #FFBD88; }
+  /* line 10, /Users/David/Desktop/git/resume/src/app/shared/scss/_button.scss */
+  button:hover {
+    color: #FFFFFF;
+    background: #FFBD88; }
+
 /* line 2, /Users/David/Desktop/git/resume/src/app/contact/scss/_contact.scss */
 .contacts .hero {
   background-image: -webkit-linear-gradient(left, #D75C37 0%, #FFBD88 100%);
@@ -4172,26 +4200,16 @@ section {
   /* line 72, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
   .tic-tac-toe .board button {
     margin-top: 64px;
-    margin-bottom: 64px;
-    padding: 15px 45px;
-    text-transform: uppercase;
-    outline: none;
-    color: #FFBD88;
-    background: #FFFFFF;
-    border: 1px solid #FFBD88; }
-    /* line 83, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
-    .tic-tac-toe .board button:hover {
-      color: #FFFFFF;
-      background: #FFBD88; }
+    margin-bottom: 64px; }
   @media screen and (max-width: 767px) {
-    /* line 91, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
+    /* line 78, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
     .tic-tac-toe .board .square-container {
       height: 75px; }
-    /* line 95, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
+    /* line 82, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
     .tic-tac-toe .board .square {
       height: 75px;
       width: 75px; }
-    /* line 100, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
+    /* line 87, /Users/David/Desktop/git/resume/src/app/tic-tac-toe/scss/_tic-tac-toe.scss */
     .tic-tac-toe .board i {
       font-size: 3em; } }
 
