--- a/src/app/shared/scss/_modal.scss
+++ b/src/app/shared/scss/_modal.scss
@@ -1,3 +1,7 @@
+body.modal-open {
+    overflow: visible;
+}
+
 .modal-content {
     border-radius: 10px;
     overflow: hidden;
@@ -15,6 +19,10 @@
     .modal-body {
         color: $text-secondary;
         padding: 64px 30px;
+    }
+
+    .modal-body.mod-congrats {
+        text-align: center;
     }
 
     .modal-footer {
