styled sudoku page

--- a/src/app/sudouku/scss/_sudouku.scss
+++ b/src/app/sudouku/scss/_sudouku.scss
@@ -2,7 +2,7 @@
 
     h3 {
         text-align: center;
-        color: $accent;
+        color: $text-secondary;
         margin-top: 120px;
     }
 
