added animations to tic tac toe

--- a/src/main.css
+++ b/src/main.css
@@ -4223,5 +4223,5 @@ button {
 /* line 3, /Users/David/Desktop/git/resume/src/app/sudouku/scss/_sudouku.scss */
 .sudouku h3 {
   text-align: center;
-  color: #D85339;
+  color: #81888D;
   margin-top: 120px; }
