--- a/src/app/tic-tac-toe/html/tic-tac-toe.html
+++ b/src/app/tic-tac-toe/html/tic-tac-toe.html
@@ -23,51 +23,53 @@
 	</section>
 
 	<section class="board">
-		 <div class= "container">
-		 	<div class="row">
-		 		<div class="col-md-12 square-container">
-		 			<div class="square right-bottom" ng-click="ticTacToeVM.playTurn(0)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(0)"></i>
-		 			</div><!--
-		 			--><div class="square right-bottom" ng-click="ticTacToeVM.playTurn(1)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(1)"></i>
-			 		</div><!--
-		 			--><div class="square bottom" ng-click="ticTacToeVM.playTurn(2)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(2)"></i>
-		 			</div>
-		 		</div>
-		 	</div>
-		 	<div class="row">
-		 		<div class="col-md-12 square-container">
-		 			<div class="square right-bottom" ng-click="ticTacToeVM.playTurn(3)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(3)"></i>
-			 		</div><!--
-		 			--><div class="square right-bottom" ng-click="ticTacToeVM.playTurn(4)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(4)"></i>
-			 		</div><!--
-		 			--><div class="square bottom" ng-click="ticTacToeVM.playTurn(5)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(5)"></i>
+		 <div class="container">
+			<div class="game-board animated" ng-class="ticTacToeVM.getAnimation()">
+			 	<div class="row">
+			 		<div class="col-md-12 square-container">
+			 			<div class="square right-bottom" ng-click="ticTacToeVM.playTurn(0)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(0)"></i>
+			 			</div><!--
+			 			--><div class="square right-bottom" ng-click="ticTacToeVM.playTurn(1)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(1)"></i>
+				 		</div><!--
+			 			--><div class="square bottom" ng-click="ticTacToeVM.playTurn(2)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(2)"></i>
+			 			</div>
 			 		</div>
-		 		</div>
-		 	</div>
-		 	<div class="row">
-		 		<div class="col-md-12 square-container">
-		 			<div class="square right" ng-click="ticTacToeVM.playTurn(6)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(6)"></i>
-			 		</div><!--
-		 			--><div class="square right" ng-click="ticTacToeVM.playTurn(7)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(7)"></i>
-			 		</div><!--
-		 			--><div class="square" ng-click="ticTacToeVM.playTurn(8)">
-						<i class="fa" ng-class="ticTacToeVM.getMark(8)"></i>
+			 	</div>
+			 	<div class="row">
+			 		<div class="col-md-12 square-container">
+			 			<div class="square right-bottom" ng-click="ticTacToeVM.playTurn(3)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(3)"></i>
+				 		</div><!--
+			 			--><div class="square right-bottom" ng-click="ticTacToeVM.playTurn(4)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(4)"></i>
+				 		</div><!--
+			 			--><div class="square bottom" ng-click="ticTacToeVM.playTurn(5)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(5)"></i>
+				 		</div>
 			 		</div>
-		 		</div>
-		 	</div>
-		 	<div class="row">
-		 		<div class="col-md-12">
-					<button name="button" ng-click="ticTacToeVM.restart()">Restart</button>
-		 		</div>
-		 	</div>
+			 	</div>
+			 	<div class="row">
+			 		<div class="col-md-12 square-container">
+			 			<div class="square right" ng-click="ticTacToeVM.playTurn(6)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(6)"></i>
+				 		</div><!--
+			 			--><div class="square right" ng-click="ticTacToeVM.playTurn(7)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(7)"></i>
+				 		</div><!--
+			 			--><div class="square" ng-click="ticTacToeVM.playTurn(8)">
+							<i class="fa" ng-class="ticTacToeVM.getMark(8)"></i>
+				 		</div>
+			 		</div>
+			 	</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+				<button name="button" ng-click="ticTacToeVM.restart()">Restart</button>
+				</div>
+			</div>
 		 </div>
 	</section>
 </div>
