added scramble-word project landing page

--- a/src/main.scss
+++ b/src/main.scss
@@ -44,3 +44,4 @@
 @import "app/resume/scss/resume";
 @import "app/tic-tac-toe/scss/tic-tac-toe";
 @import "app/sudouku/scss/sudouku";
+@import "app/scramble-word/scss/scramble-word";
