--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -15,7 +15,7 @@
 	<section class="card-section">
 	    <div class="container">
 	        <div class="row">
-	            <div class="col-md-6">
+	            <div class="col-md-4">
 	              <div class="card-container">
 	                <a ui-sref="main.tic-tac-toe">
 	                    <p class="card-container-header">Tic Tac Toe</p>
@@ -23,11 +23,19 @@
 	                </a>
 	              </div>
 	            </div>
-	            <div class="col-md-6">
+	            <div class="col-md-4">
 	              <div class="card-container">
 	                  <a ui-sref="main.sudouku">
 	                    <p class="card-container-header">Sudouku</p>
 	                    <i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
+	                  </a>
+	              </div>
+	            </div>
+				<div class="col-md-4">
+	              <div class="card-container">
+	                  <a ui-sref="main.scramble-word">
+	                    <p class="card-container-header">Scramble Word</p>
+	                    <i class="card-container-logo fa fa-file-word-o fa-3x"></i>
 	                  </a>
 	              </div>
 	            </div>
