--- a/src/main.css
+++ b/src/main.css
@@ -4225,3 +4225,9 @@ button {
   text-align: center;
   color: #81888D;
   margin-top: 120px; }
+
+/* line 3, /Users/David/Desktop/git/resume/src/app/scramble-word/scss/_scramble-word.scss */
+.scramble-word h3 {
+  text-align: center;
+  color: #81888D;
+  margin-top: 120px; }
