--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -37,7 +37,7 @@
 							I grew up in China and after I graduated from college, I had the chance to come to the United States because my father was able to apply for a green card for me and I’ve been here ever since.
 						</p>
 						<p>
-							I enjoy taking pictures, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world
+							I enjoy taking pictures, eating at nice restaraunts, keeping up with the latest technolgy, and traveling the world.
 						</p>
 					</div>
 				</div>
